// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing case #1 1`] = `
Object {
  "data": null,
  "loadingOperationId": null,
  "numRefs": 0,
  "timestamp": 0,
}
`;

exports[`Snapshot testing case #1 2`] = `
Object {
  "data": null,
  "loadingOperationId": null,
  "numRefs": 1,
  "timestamp": 0,
}
`;

exports[`Snapshot testing case #1 3`] = `
Object {
  "data": "Test data",
  "loadingOperationId": null,
  "numRefs": 1,
  "timestamp": 1527945685468,
}
`;

exports[`Snapshot testing case #1 4`] = `
Object {
  "data": "Test data",
  "loadingOperationId": null,
  "numRefs": 1,
  "timestamp": 1527945685468,
}
`;

exports[`Snapshot testing case #1 5`] = `
Object {
  "data": "Test data",
  "loadingOperationId": null,
  "numRefs": 0,
  "timestamp": 1527945685468,
}
`;

exports[`Snapshot testing case #1 6`] = `
Object {
  "data": null,
  "loadingOperationId": null,
  "numRefs": 0,
  "timestamp": 0,
}
`;

exports[`Snapshot testing case #2 1`] = `
Object {
  "data": null,
  "loadingOperationId": null,
  "numRefs": 0,
  "timestamp": 0,
}
`;

exports[`Snapshot testing case #2 2`] = `
Object {
  "data": null,
  "loadingOperationId": 12345,
  "numRefs": 0,
  "timestamp": 0,
}
`;

exports[`Snapshot testing case #2 3`] = `
Object {
  "data": null,
  "loadingOperationId": 12345,
  "numRefs": 0,
  "timestamp": 0,
}
`;

exports[`Snapshot testing case #2 4`] = `
Object {
  "data": "Temporary Data",
  "loadingOperationId": 12345,
  "numRefs": 0,
  "timestamp": 1527945694106,
}
`;

exports[`Snapshot testing case #2 5`] = `
Object {
  "data": "Temporary Data",
  "loadingOperationId": 12345,
  "numRefs": 0,
  "timestamp": 1527945694106,
}
`;

exports[`Snapshot testing case #2 6`] = `
Object {
  "data": "Correct data",
  "loadingOperationId": null,
  "numRefs": 0,
  "timestamp": 1527945696574,
}
`;

exports[`Snapshot testing case #2 7`] = `
Object {
  "data": "Correct data",
  "loadingOperationId": null,
  "numRefs": 0,
  "timestamp": 1527945696574,
}
`;

exports[`Snapshot testing case #2 8`] = `
Object {
  "data": "Correct data",
  "loadingOperationId": null,
  "numRefs": -3,
  "timestamp": 1527945696574,
}
`;

exports[`Snapshot testing case #2 9`] = `
Object {
  "data": null,
  "loadingOperationId": null,
  "numRefs": -3,
  "timestamp": 0,
}
`;
